// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile aа huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 28,
              "fontWeight": "900",
              "lineHeight": 28,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile aа medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile aа wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 28,
              "fontWeight": "900",
              "lineHeight": 28,
              "marginBottom": 10,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;

exports[`tile aа without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View>
      <View>
        <View
          style={
            Object {
              "marginBottom": 0,
            }
          }
        >
          <ArticleLabel
            color="#005B8D"
            isVideo={false}
            title="label"
          />
        </View>
        <Text
          accessibilityRole="header"
          aria-level="3"
          style={
            Object {
              "color": "#333333",
              "fontFamily": "TimesModern-Bold",
              "fontSize": 20,
              "fontWeight": "900",
              "lineHeight": 20,
              "marginBottom": 5,
            }
          }
        >
          This is tile headline
        </Text>
        <ArticleFlags
          flags={
            Array [
              Object {
                "expiryTime": "2030-03-14T12:00:00.000Z",
                "type": "EXCLUSIVE",
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</Link>
`;
